<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!--<android.support.design.widget.AppBarLayout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <!--<android.support.v7.widget.Toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_close"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    />

                <TextView
                    android:id="@+id/update_account_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_update"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <!--</android.support.v7.widget.Toolbar>-->
    </com.google.android.material.appbar.AppBarLayout>
    <!--</android.support.design.widget.AppBarLayout> -->




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_text"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/settings_profile_image"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_change_btn"
        android:hint="@string/settings_phone_number_hint"
        android:layout_margin="15dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:hint="@string/settings_full_name_hint"
        android:layout_margin="15dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_full_name"
        android:hint="@string/settings_address_hint"
        android:layout_margin="15dp"
        android:padding="10dp"
        />

    <!--
    <EditText
        android:id="@+id/settings_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_address"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/settings_city_name_hint"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_city_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/settings_email_address_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:autofillHints="@string/settings_autofill_hints" />
        -->

</RelativeLayout>